@@ -12,6 +12,11 @@ import org.springframework.security.config.annotation.web.configuration.EnableWe
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
+import org.springframework.web.cors.CorsConfiguration;
+import org.springframework.web.cors.CorsConfigurationSource;
+import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
+
+import java.util.List;
 
 /**
  * Configuration class for Spring Security.
@@ -45,28 +50,34 @@ public class ApplicationSecurityConfig {
     return authenticationManagerBuilder.build();
   }
 
-  //  @Bean
-  //  public CorsConfigurationSource corsConfigurationSource() {
-  //    CorsConfiguration configuration = new CorsConfiguration();
-  //    configuration.setAllowedOrigins(List.of("http://localhost:3000"));
-  //    //    configuration.setAllowedMethods(Arrays.asList("GET","POST"));
-  //    UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-  //    source.registerCorsConfiguration("/**", configuration);
-  //    return source;
-  //  }
+  @Bean
+  public CorsConfigurationSource corsConfigurationSource() {
+    CorsConfiguration configuration = new CorsConfiguration();
+
+    configuration.setAllowedHeaders(List.of("*"));
+    configuration.setAllowedOrigins(List.of("http://localhost:3000", "http://127.0.0.1:3000"));
+    configuration.setAllowedMethods(List.of("*"));
+    configuration.setAllowCredentials(false);
+    configuration.setMaxAge(-1L);
+
+    UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+    source.registerCorsConfiguration("/**", configuration);
+    return source;
+  }
 
   @Bean
   public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
     http
+        .cors(cors -> cors.configurationSource(corsConfigurationSource()))
         .csrf().disable()
         .authorizeHttpRequests(authorize ->
-            authorize.requestMatchers(HttpMethod.GET, "/dishes")
+            authorize
+                .requestMatchers(HttpMethod.GET, "/**")
                 .permitAll()
-                .requestMatchers(HttpMethod.GET, "/reviews")
+                .requestMatchers(HttpMethod.OPTIONS, "/**")
                 .permitAll()
                 .requestMatchers(HttpMethod.POST, "/dishes").hasRole("ADMIN")
-                .anyRequest()
-                .authenticated()
+                .anyRequest().hasAnyRole("ADMIN", "USER")
         )
         .httpBasic();
 
